# smartbe-sdk

./: LICENSE  README.md
.claude/skills/skill-installer/: SKILL.md
cli/: smartbe-secret
node/: README.md  package.json
node/src/: index.ts
python/: README.md  pyproject.toml
python/smartbe_secrets/: __init__.py  _resolver.py
skills/: catalog.json
skills/nano-banana-pro/: SKILL.md  run
skills/nano-banana-pro/scripts/: generate_image.py
skills/skill-installer/: SKILL.md  run
skills/skill-installer/scripts/: installer.py
