[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartbe-secrets"
version = "0.1.0"
description = "SmartBe Secrets SDK — resolve secrets from the SmartBe control plane"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "SmartBe", email = "hello@smartbe.io" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/smartbe-io/sdk"
